:pencil: Instructions on how to compile as JAR